--- a/Restfull Apis/package.json
+++ b/Restfull Apis/package.json
@@ -10,6 +10,8 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "method-override": "^3.0.0",
+    "uuid": "^11.0.5"
   }
 }
